# src/main/java/io/qozz/qozzbank/controller/UserController.java
@@ -6,6 +6,7 @@ import io.qozz.qozzbank.service.dto.user.UserDto;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.openapitools.api.UsersApi;
+import org.openapitools.model.UserData;
 import org.openapitools.model.UserRequest;
 import org.openapitools.model.UserResponse;
 import org.springframework.http.HttpStatus;
@@ -23,29 +24,23 @@ public class UserController implements UsersApi {
     private final UserMapper userMapper;
 
     @Override
-    public ResponseEntity<UserResponse> createUser(UserRequest userRequest) {
-        log.info("[USER_CREATE_START] AuthId: [{}], Email: [{}]",
-                userRequest.getAuthId(), userRequest.getEmail());
+    public ResponseEntity<UserResponse> getUser(UUID xCorrelationID) {
+        UserDto userDto = userService.getUser();
+        UserData userData = userMapper.toUserData(userDto);
+        UserResponse response = new UserResponse()
+                .user(userData);
 
-        UserDto result = userService.createUser(userRequest);
-
-        UserResponse response = userMapper.toResponse(result);
-
-        log.info("[USER_CREATE_SUCCESS] InternalId: [{}]", result.id());
-
-        return ResponseEntity.status(HttpStatus.CREATED).body(response);
+        return ResponseEntity.ok(response);
     }
 
     @Override
-    public ResponseEntity<UserResponse> getUserByAuthId(UUID id) {
-        log.info("[USER_GET_START] AuthId: [{}]", id);
+    public ResponseEntity<UserResponse> createUser(UUID xCorrelationID, UserRequest userRequest) {
+        UserDto userDto = userService.createUser(userRequest);
+        UserData userData = userMapper.toUserData(userDto);
+        UserResponse response = new UserResponse()
+                .user(userData);
 
-        UserDto userDto = userService.findUserByAuthId(id);
-
-        UserResponse response = userMapper.toResponse(userDto);
-
-        log.info("[USER_GET_SUCCESS] AuthId: [{}]", id);
-
-        return ResponseEntity.ok(response);
+        return ResponseEntity.status(HttpStatus.CREATED)
+                .body(response);
     }
 }
